--- a/src/views/productsByCategory.handlebars
+++ b/src/views/productsByCategory.handlebars
@@ -14,10 +14,10 @@
         </h3>
     {{/if}}
 {{else}}
-    <p>
+    <h3 class="text-center">
         Inicia sesión para poder comprar!
         <a href="/login" class="btn btn-info">Iniciar</a>
-    </p>
+    </h3>
 {{/if}}
 <div class="container">
     <h1>Categoría: {{category}}</h1>
