--- a/src/views/uploadProfile.handlebars
+++ b/src/views/uploadProfile.handlebars
@@ -1,5 +1,4 @@
 <br>
-<br>
 <form action="/profile/{{user._id}}" method="POST" enctype="multipart/form-data">
     <div class="mb-3">
         <label for="first_name" class="form-label">Nombre</label>
@@ -15,7 +14,7 @@
     </div>
     <div class="mb-3">
         <label for="profileImage" class="form-label">Imagen de Perfil</label>
-        <input type="file" class="form-control" id="profileImage" name="profileImage">
+        <input type="file" class="form-control" id="profileImage" name="profile">
     </div>
     <button type="submit" class="btn btn-success">Guardar cambios</button>
     <a class="btn btn-primary" href="/profile">Volver</a>
