--- a/src/views/viewDetailProduct.handlebars
+++ b/src/views/viewDetailProduct.handlebars
@@ -15,10 +15,10 @@
             </h3>
         {{/if}}
     {{else}}
-        <p>
+        <h3 class="text-center">
             Inicia sesión para poder comprar!
             <a href="/login" class="btn btn-info">Iniciar</a>
-        </p>
+        </h3>
     {{/if}}
     <div class="container mt-5">
         <h1 class="text-center">{{product.name}}</h1>
