--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -19,7 +19,7 @@
             <div class="message border rounded p-3 mb-3" style="background-color: antiquewhite;">
                 <div style="display: flex; gap: 20px">
                     <div>
-                        <img style="width: 50px;" src="{{user.profile_image}}" alt="">
+                        <img style="width: 50px; border-radius: 25px" src="{{user.profile_image}}" alt="">
                     </div>
                     <div>
                         <h5>
@@ -65,7 +65,7 @@
                                 <p>{{content}}</p>
                             </div>
                             <div>
-                                <img style="width: 50px;" src="{{user.profile_image}}" alt="">
+                                <img style="width: 50px; border-radius: 25px" src="{{user.profile_image}}" alt="">
                             </div>
                         </div>
                         <hr>
