--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,95 +1,120 @@
-<body>
-    {{#if user}}
-        <h3 class="text-center">Bienvenido, 
-            <strong>
-                {{user.first_name}}
-            </strong>
-        </h3>
-    {{else}}
-        <h3>
-            <br>
-            Inicia sesión para acceder a los productos
-            <a href="/login" class="btn btn-info">Iniciar</a>
-        </h3>
-    {{/if}}
+{{#if user}}
+    <h3 class="text-center">Bienvenido, 
+        <strong>
+            {{user.first_name}}
+        </strong>
+    </h3>
+{{else}}
+    <div class="d-grid gap-2">
+        <a href="/login" class="btn btn-outline-dark">Inicia sesión</a>
+        <br>
+    </div>
+{{/if}}
 
-    <br>
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-            <img src="https://http2.mlstatic.com/D_NQ_964347-MLA76888823203_062024-OO.webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
-                {{!-- <p>Some representative placeholder content for the first slide.</p> --}}
-            </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-            <img src="https://http2.mlstatic.com/D_NQ_910333-MLA76685956718_062024-OO.webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
-                {{!-- <p>Some representative placeholder content for the second slide.</p> --}}
-            </div>
-            </div>
-            <div class="carousel-item">
-            <img src="https://http2.mlstatic.com/D_NQ_905292-MLA76622683430_062024-OO.webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
-                {{!-- <p>Some representative placeholder content for the third slide.</p> --}}
-            </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev btn btn-outline" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </button>
-        <button class="carousel-control-next btn btn-outline" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </button>
+<br>
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <br>
-    <br>
-    <div class="section">
-        <h2>Productos Más Vendidos</h2>
-        <div class="row">
-            {{#each bestsellingProducts}}
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
-                        <div class="card-body">
-                            <h5 class="card-title">{{this.name}}</h5>
-                            <p class="card-text">{{this.description}}</p>
-                            <a href="/product/{{this._id}}" class="btn btn-primary">Ver Detalles</a>
-                        </div>
-                    </div>
-                </div>
-            {{/each}}
+    <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+        <img src="https://http2.mlstatic.com/D_NQ_810897-MLA79384224259_092024-OO.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5></h5>
+        </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+        <img src="https://http2.mlstatic.com/D_NQ_844646-MLA79235882494_092024-OO.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5></h5>
+        </div>
+        </div>
+        <div class="carousel-item">
+        <img src="https://http2.mlstatic.com/D_NQ_638984-MLA79417155663_092024-OO.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+            <h5></h5>
+        </div>
         </div>
     </div>
-    <br>
-    <br>
-    {{#if user}}
-        <div class="section">
-            <h2>Tus Productos Favoritos</h2>
-            <div class="row">
-                {{#each user.favorites}}
-                <div class="col-md-3">
-                    <div class="card">
-                        <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
-                        <div class="card-body">
-                            <h5 class="card-title">{{this.name}}</h5>
-                            <p class="card-text">{{this.description}}</p>
-                            <a href="/product/{{this._id}}" class="btn btn-primary">Ver Detalles</a>
+    <button class="carousel-control-prev btn btn-outline" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+    </button>
+    <button class="carousel-control-next btn btn-outline" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+    </button>
+</div>
+<br>
+<br>
+<div class="section">
+    <h2>Productos Más Vendidos</h2>
+    <div style="display: flex; justify-content: center">
+        <img src="https://clubdebeneficios.com/media/wysiwyg/CDB-LOMASVENDIDO-KV-DESKTOP_1.jpg" alt="">
+        <div id="bestsellingCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" style="display: flex; justify-content:space-around; width: 700px;">
+                {{#each bestsellingProducts}}
+                <div class="carousel-item {{#if @first}}active{{/if}}">
+                    <div class="col-md-3">
+                        <div class="card" style="width: 300px;">
+                            <img src="{{this.thumbnail}}" class="card-img-top" alt="{{this.name}}">
+                            <div class="card-body">
+                                <h5 class="card-title">{{this.name}}</h5>
+                                <p class="card-text">{{this.description}}</p>
+                                <a href="/products/{{this._id}}" class="btn btn-primary">Ver Detalles</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 {{/each}}
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#bestsellingCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#bestsellingCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
         </div>
-    {{/if}}
-</body>
+    </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="section">
+    <h2>Productos con más ⭐⭐⭐⭐⭐</h2>
+    <div style="display: flex; justify-content: center">
+        <img src="https://clubdebeneficios.com/media/wysiwyg/CDB-LOMASVENDIDO-KV-DESKTOP_1.jpg" alt="">
+        <div id="ratedProductsCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" style="display: flex; justify-content:space-around; width: 700px;">
+                {{#each ratedProducts}}
+                <div class="carousel-item {{#if @first}}active{{/if}}">
+                    <div class="col-md-3">
+                        <div class="card" style="width: 300px;">
+                            <img src="{{this.thumbnail}}" class="card-img-top" alt="{{this.name}}">
+                            <div class="card-body">
+                                <h5 class="card-title">{{this.name}}</h5>
+                                <p class="card-text">{{this.description}}</p>
+                                <a href="/products/{{this._id}}" class="btn btn-primary">Ver Detalles</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#ratedProductsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#ratedProductsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
+    </div>
+</div>
