--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -1,19 +1,14 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="margin-bottom: 15px;">
     <div class="container-fluid">
-
-        <!-- icono -->
-        <a class="navbar-brand">
-            <img src="https://i.postimg.cc/9fpzFrJ7/FANA.png" width="120px" alt="logo fanaticos de las casacas">
+        <a class="navbar-brand" href="/products">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdS0W3ny5RwCS_Ez5OPGhYTkEOVcmY7ga3Ww&s" width="50px" alt="" style="border-radius: 25%;">
         </a>
-
-        <!-- boton del menu -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#botonmenu"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#botonmenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
-        <!-- menu colapsable -->
-          <div class="collapse navbar-collapse" id="botonmenu">
+        
+        <div class="collapse navbar-collapse" id="botonmenu">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Inicio</a>
@@ -35,8 +30,6 @@
                         <li><a class="dropdown-item" href="/products/category/Stationery">Stationery</a></li>
                     </ul>
                 </li>
-                {{!-- {{#if (or (equals user.role "user") (equals user.role "premium"))}}
-                {{/if}} --}}
                 {{#if user}}
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -88,9 +81,9 @@
                                 <li><a class="dropdown-item" href="/profile">Ver Perfil</a></li>
                                 <li><a class="dropdown-item" href="/profile/{{user._id}}">Editar Perfil</a></li>
                                 <li><a class="dropdown-item" href="/carts/{{user.cart._id}}">Carrito</a></li>
-                                <li><a class="dropdown-item" href="/chat">Envianos un mensaje!</a></li>
                                 <li><a class="dropdown-item" href="/purchases">Mis compras</a></li>
-                                <li><a class="dropdown-item" href="#"><del>Favoritos</del></a></li>
+                                <li><a class="dropdown-item" href="/chat">Envianos un mensaje!</a></li>
+                                {{!-- <li><a class="dropdown-item" href="#"><del>Favoritos</del></a></li> --}}
                                 <hr>
                                 {{#if (equals user.role "premium")}}
                                     <li><a class="dropdown-item" href="/adminAddProduct">Publicar un producto</a></li>
