--- a/src/views/productsByCategory.handlebars
+++ b/src/views/productsByCategory.handlebars
@@ -7,17 +7,15 @@
         </h3>
     {{else}}
         <h3>
-            Bienvenido, usuario {{user.role}}:
+            Bienvenido, {{user.role}}:
         </h3>
         <h3>
             <strong>{{user.first_name}}</strong>
         </h3>
     {{/if}}
 {{else}}
-    <h3 class="text-center">
-        Inicia sesión para poder comprar!
-        <a href="/login" class="btn btn-info">Iniciar</a>
-    </h3>
+    <a href="/login" class="btn btn-outline-dark">Inicia sesión</a>
+    <br>
 {{/if}}
 <div class="container">
     <h1>Categoría: {{category}}</h1>
@@ -32,11 +30,15 @@
                     <p class="card-text">{{this.description}}</p>
                     <p class="card-text"><strong>Precio:</strong> ${{this.price}}</p>
                     <p class="card-text"><strong>Stock:</strong> {{this.stock}}</p>
-                    {{#if (equals this.stock 0)}}
-                        <p class="text-danger">Producto agotado</p>
-                        <a href="/products/{{this._id}}" class="btn btn-outline-info">Ver Detalle</a>
+                    {{#if (equals user.role "user")}}
+                        {{#if (equals this.stock 0)}}
+                            <p class="text-danger">Producto agotado</p>
+                            <a href="/products/{{this._id}}" class="btn btn-outline-info">Ver Detalle</a>
+                        {{else}}
+                            <button class="btn btn-success add-cart" data-product-id="{{this._id}}" data-product-stock="{{this.stock}}">Agregar al carrito</button>
+                            <a href="/products/{{this._id}}" class="btn btn-outline-info">Ver Detalle</a>
+                        {{/if}}
                     {{else}}
-                        <button class="btn btn-success add-cart" data-product-id="{{this._id}}" data-product-stock="{{this.stock}}">Agregar al carrito</button>
                         <a href="/products/{{this._id}}" class="btn btn-outline-info">Ver Detalle</a>
                     {{/if}}
                 </div>
